--- a/HyoutaPluginBase/HyoutaPluginBase.csproj
+++ b/HyoutaPluginBase/HyoutaPluginBase.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DuplicatableStream.cs" />
     <Compile Include="IDecompressor.cs" />
     <Compile Include="IProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
