--- a/HyoutaUtils/HyoutaUtils.csproj
+++ b/HyoutaUtils/HyoutaUtils.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ArrayUtils.cs" />
     <Compile Include="BitUtils.cs" />
     <Compile Include="EndianUtils.cs" />
+    <Compile Include="ExternalProgramExecution.cs" />
     <Compile Include="HexUtils.cs" />
     <Compile Include="NumberUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
