--- a/HyoutaUtils/HyoutaUtils.csproj
+++ b/HyoutaUtils/HyoutaUtils.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Streams\DuplicatableByteArrayStream.cs" />
     <Compile Include="Streams\DuplicatableFileStream.cs" />
+    <Compile Include="Streams\EmptyStream.cs" />
     <Compile Include="Streams\PartialStream.cs" />
     <Compile Include="StreamUtils.cs" />
     <Compile Include="TextUtils.cs" />
