Add ConcatenatedStream, a DuplicatableStream that joins together multiple other streams into one long stream.

--- a/HyoutaUtils/HyoutaUtils.csproj
+++ b/HyoutaUtils/HyoutaUtils.csproj
@@ -48,6 +48,7 @@
     <Compile Include="HexUtils.cs" />
     <Compile Include="NumberUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Streams\ConcatenatedStream.cs" />
     <Compile Include="Streams\DuplicatableByteArrayStream.cs" />
     <Compile Include="Streams\DuplicatableFileStream.cs" />
     <Compile Include="Streams\ConstantStream.cs" />
