--- a/HyoutaPluginBase/HyoutaPluginBase.csproj
+++ b/HyoutaPluginBase/HyoutaPluginBase.csproj
@@ -47,6 +47,7 @@
     <Compile Include="FileContainer\INode.cs" />
     <Compile Include="IDecompressor.cs" />
     <Compile Include="IProgram.cs" />
+    <Compile Include="IRomMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
