Add a metadata header field to HyoutaArchiveChunk to store extra stuff for the whole chunk instead of per-file.

--- a/HyoutaUtils/HyoutaUtils.csproj
+++ b/HyoutaUtils/HyoutaUtils.csproj
@@ -53,6 +53,7 @@
     <Compile Include="HexUtils.cs" />
     <Compile Include="HyoutaArchive\HyoutaArchiveBpsPatchInfo.cs" />
     <Compile Include="HyoutaArchive\HyoutaArchiveChunk.cs" />
+    <Compile Include="HyoutaArchive\HyoutaArchiveChunkInfo.cs" />
     <Compile Include="HyoutaArchive\HyoutaArchiveCompression.cs" />
     <Compile Include="HyoutaArchive\HyoutaArchiveCompressionInfo.cs" />
     <Compile Include="HyoutaArchive\HyoutaArchiveDecompression.cs" />
