--- a/HyoutaUtils/HyoutaUtils.csproj
+++ b/HyoutaUtils/HyoutaUtils.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="ArrayUtils.cs" />
     <Compile Include="BitUtils.cs" />
+    <Compile Include="Bps\BpsPatcher.cs" />
+    <Compile Include="Bps\BpsUtils.cs" />
     <Compile Include="ChecksumUtils.cs" />
     <Compile Include="Checksum\CRC32.cs" />
     <Compile Include="Checksum\CRC32Algorithm.cs" />
