--- a/HyoutaUtils/HyoutaUtils.csproj
+++ b/HyoutaUtils/HyoutaUtils.csproj
@@ -1,88 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{771553C8-0C50-411F-AB7F-E47553C81587}</ProjectGuid>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HyoutaUtils</RootNamespace>
-    <AssemblyName>HyoutaUtils</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <ProjectReference Include="..\HyoutaPluginBase\HyoutaPluginBase.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ArrayUtils.cs" />
-    <Compile Include="BitUtils.cs" />
-    <Compile Include="Bps\BpsPatcher.cs" />
-    <Compile Include="Bps\BpsUtils.cs" />
-    <Compile Include="ChecksumUtils.cs" />
-    <Compile Include="Checksum\CRC32.cs" />
-    <Compile Include="Checksum\CRC32Algorithm.cs" />
-    <Compile Include="Checksum\MD5.cs" />
-    <Compile Include="Checksum\SHA1.cs" />
-    <Compile Include="EndianUtils.cs" />
-    <Compile Include="ExternalProgramExecution.cs" />
-    <Compile Include="GenericRomMapper.cs" />
-    <Compile Include="HexUtils.cs" />
-    <Compile Include="HyoutaArchive\Compression\DeflateSharpCompressionInfo.cs" />
-    <Compile Include="HyoutaArchive\Compression\IHyoutaArchiveCompressionInfo.cs" />
-    <Compile Include="HyoutaArchive\HyoutaArchiveBps.cs" />
-    <Compile Include="HyoutaArchive\HyoutaArchiveBpsPatchInfo.cs" />
-    <Compile Include="HyoutaArchive\HyoutaArchiveChunk.cs" />
-    <Compile Include="HyoutaArchive\HyoutaArchiveChunkInfo.cs" />
-    <Compile Include="HyoutaArchive\HyoutaArchiveCompression.cs" />
-    <Compile Include="HyoutaArchive\HyoutaArchiveContainer.cs" />
-    <Compile Include="HyoutaArchive\HyoutaArchiveFileInfo.cs" />
-    <Compile Include="NumberUtils.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RomMapperUtils.cs" />
-    <Compile Include="Streams\ConcatenatedStream.cs" />
-    <Compile Include="Streams\DuplicatableByteArrayStream.cs" />
-    <Compile Include="Streams\DuplicatableFileStream.cs" />
-    <Compile Include="Streams\ConstantStream.cs" />
-    <Compile Include="Streams\EmptyStream.cs" />
-    <Compile Include="Streams\MemoryStream64.cs" />
-    <Compile Include="Streams\PartialStream.cs" />
-    <Compile Include="StreamUtils.cs" />
-    <Compile Include="TextUtils.cs" />
-    <Compile Include="TimeUtils.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\HyoutaPluginBase\HyoutaPluginBase.csproj">
-      <Project>{6e153ce7-05b9-4eba-8de8-ad842214f60b}</Project>
-      <Name>HyoutaPluginBase</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
